fix: aligned projects on portfolio

--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,7 @@ main {
 .project {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   max-width: 100%;
   margin: 1em 0 2em 0;
 
